[package]
name = "cache-benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

modular-cache = { path = "../modular-cache" }

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
# name = "queued_cache"
name = "concurrent_queued_cache"
harness = false